not dialog fix IE8 + td alignment

--- a/sass/xd.scss
+++ b/sass/xd.scss
@@ -1014,7 +1014,7 @@ o8o        o888o o888ooooood8 o888bood8P'   o888o o88o     o8888o
       padding:10px 14px;
     }
 
-    html:not(.ms-dialog-nr) body.xd #main-content {
+    html.not-dialog body.xd #main-content {
         overflow: visible;
         min-height:1px;
     }
